# ai-in-biology

./: .env.example  .gitignore  404.html  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  nginx.conf  objects.inv  prometheus.yml  pyproject.toml  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-api.yml  deploy-frontend.yml  deploy-pages.yml  docs-build.yml  sync-notebooks.yml  tests.yml
api/: Dockerfile  Dockerfile.jupyter  requirements.txt
api/clinical/: index.html
api/drug_discovery/: index.html
api/ecology/: index.html
api/genomics/: index.html
api/overview/: index.html
api/protein/: index.html
api/single_cell/: index.html
api/src/: __init__.py  main.py
chapters/chapter_01_bioinfo_basics/: index.html
chapters/chapter_02_dna_language_models/: index.html
chapters/chapter_03_attention_in_genomics/: index.html
chapters/chapter_04_data_scales/: index.html
chapters/chapter_05_embeddings/: index.html
chapters/chapter_06_modeling/: index.html
chapters/chapter_07_genomics/: index.html
chapters/chapter_08_protein/: index.html
chapters/chapter_09_single_cell/: index.html
chapters/chapter_10_development/: index.html
chapters/chapter_11_neuroscience/: index.html
chapters/chapter_12_ethology/: index.html
chapters/chapter_13_evolution/: index.html
chapters/chapter_14_ecology/: index.html
chapters/chapter_15_earth/: index.html
chapters/chapter_16_medicine/: index.html
chapters/chapter_17_biotech/: index.html
chapters/chapter_18_experiments/: index.html
docs/: requirements.txt
frontend/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
manuscript/: AI_in_Biological_Sciences.docx  README.md
search/: search_index.json
ssl/: README.md
tools/: build_manuscript.py
(+74 files in other folders)
