[project]
name = "ai-bio-sciences"
version = "0.1.0"
description = "Comprehensive textbook companion for AI in Biological Sciences"
authors = [
    {name = "DaScient Intelligence Academy", email = "press@dascient.com"},
    {name = "Dr. Aris Thorne", email = "a.thorne@dascient.com"}
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.35.0",
    "biopython>=1.81",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "scvi-tools>=1.0.0",
    "anndata>=0.10.0",
    "scanpy>=1.9.0",
    "pyro-ppl>=1.8.0",
    "pytorch-lightning>=2.1.0",
    "hydra-core>=1.3.0",
    "wandb>=0.16.0",
    "mlflow>=2.8.0",
    "great-expectations>=0.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings-python>=1.7.0",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-glightbox>=0.3.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["api/tests"]
asyncio_mode = "auto"
